--- a/2.0-Beta1 Release Notes.md
+++ b/2.0-Beta1 Release Notes.md
@@ -1,5 +1,26 @@
 # Baseline v2.0 Beta 1 Release Notes
-## New Features
+## New Configuration File Keys
+- swiftDialog Icons are now supported for each individual line item in your list
+	- Each of the item types (Installomator, Packages, Scripts) now supports `Icon` as a key type
+	- This is a `<string>` value which points to an icon file you would like to appear on that line item.
+	- Define your `Icon` in Scripts, Packages, or Installomator Labels.
+	- `Icon` can be a full local file path, a filename (if the file lives in `/usr/local/Baseline/Icons` ), an SF Symbole, or a URL where the file is hosted.
+	- See this swiftDialog documentation for more details: https://github.com/swiftDialog/swiftDialog/wiki/Item-Lists#advanced
+	- This feature added by: tiredsince1985 @drewdiver
+- New configuration key `ProgressBar` type `boolean`
+	- Defaults to False
+	- If set to True, the swiftDialog Progress Bar feature will be used and incremented as items are progressed
+	- This feature added by: Mykola Grymalyuk @khronokernel
+- New configuration key `ProgressBarDisplayNames`type `boolean`
+	- Defaults to False
+	- If set to True, the swiftDialog `progresstext` feature will be used, and will list each item on the bottom of the window as it's being processed.
+	- Currently only works if `ProgressBar` is also set to true, but this may change with a future swiftDialog update
+	- This feature added by: Mykola Grymalyuk @khronokernel
+- New configuration key `LogOut`
+	- Defaults to False
+	- If set to true, Baseline will force a logout at the end of the run instead of a Restart.
+- If `Installomator.pkg` is found in `/usr/local/Baseline/Packages` , then this will be used to install Installomator. 
+	 - This allows admins to "pin" the version of Installomator they're using
 - `--blurscreen` is now able to be disabled via profile. If you set this `BlurScreen` key to false then the `--blurscreen` feature of SwiftDialog will not be used. 
 	- You may wish to add `--ontop` and/or `--moveable` to the SwiftDialog Options for each window.
 - The "Ok" button can now be enabled for the List View window. 
@@ -14,11 +35,41 @@
 		- If this key is omitted from the Baseline configuration file, then SwiftDialog will be reinstalled as the last Baseline item *if the custom png file exists.*
 		- If this key is set to `false` then SwiftDialog will not be reinstalled, even if a custom icon is found. This is useful if you're running Baseline for circumstances aside from initial workstation deployment.
 		- If this key is set to `true` then SwiftDialog will be reinstalled as the last Baseline item, regardless of any other circumstances
+- New boolean configuration file key`IgnoreDefaultInstallomatorOptions`
+	- Set this value to true if you do not want Baseline to use the built-in default Installomator options.
+		- Built in options are `NOTIFY=silent` and `BLOCKING_PROCESS_ACTION=kill`
+- New configuration key `BailOutFile`
+	- Type: `string` Value: `/path/to/file`
+	- Each time Baseline processes an item (be it a Script, Installomator Label, or PKG) it will check for the existence of this file.
+	- If this file exists, Baseline will exit immediately instead of continuing to process items.
+	- A failure message will be shown including the name of the previous item as a failure.
+	- Use this feature if you want an escape from the entire Baseline process based on the output of a script or pkg run.
+	- This file will be deleted upon exit.
+	- Baseline will exit using the exit conditions configured in the profile.
 
+## New Command-Line Arguments
+We are adding extended support for running Baseline as a script (as opposed to the PKG deployment.) The default PKG will not make use of these command-line arguments, however they could be used in conjunction with a PKG by creating your own LaunchDaemon with the `ProgramArguments` key set properly.
+- `-c|--config|--configuration [/path/to/config.plist]`
+	- Runs Baseline using the designated plist as it's configuration file.
+	- Priority for which configuration to use in case of conflict is as follows:
+		1. Configuration file passed as a command-line argument
+		1. Configuration file located at `/usr/local/Baseline/BaselineConfig.plist`
+		1. `.mobileconfig` Profile installed manually or via MDM
+	- Valid Plist configuration files can be created using iMazing Profile Editor.
 
 ## Improvements and Fixes
 - Consolidated temporary files into a single directory to simplified the cleanup process.
 - Better handling if the configuration profile contains both `LogOut` and `Restart` keys.
 	- If both values are set to `true` then `Restart` takes precedence.
-
-
+- Improved the handling of the `/usr/local/Baseline/Icons` folder (over 1.3beta1) to solve for permissions issues.
+- ProfileManifest updated for new keys, as well as correcting the tooltip on the `CleanupAfterUse` key.
+- Baseline now uses a temporary Json file to generate the List View content.
+	- Big thanks to tiredsince1985 @drewdiver for contributing this change
+- If `Restart` is set to `False`, then the default List View messaging will no longer inform the user that their device will restart.
+	- Another thanks to Mykola Grymalyuk @khronokernel for this
+- Added `-L` curl option to the command locating the latest Installomator pkg. This will help in case the Repo changes names in the future.
+- Fixed bug with including multiple Installomator options
+	- Options were not parsing properly from the config file to passing options to the command when multiple options were included
+- When using a `.mobileconfig` configuration profile, Baseline will now copy the contents to a temporary directory and use the temp as it's config.
+	- This should prevent an edge case issue we've seen with some MDM's reassigning the profile mid-run, causing errors.
+- 
