Update 2.0-Beta1 Release Notes.md

--- a/2.0-Beta1 Release Notes.md
+++ b/2.0-Beta1 Release Notes.md
@@ -82,4 +82,6 @@ We are adding extended support for running Baseline as a script (as opposed to t
 	- Options were not parsing properly from the config file to passing options to the command when multiple options were included
 - When using a `.mobileconfig` configuration profile, Baseline will now copy the contents to a temporary directory and use the temp as it's config.
 	- This should prevent an edge case issue we've seen with some MDM's reassigning the profile mid-run, causing errors.
+- Success and Failure dialogs now use the same "QuitKey" combination as defined in the config (`Command + ]` is default.)
+- Fixed an issue where if the Success or Failure dialogs were quit with the quit key they would appear 10 times and then Baseline would exit with an error.
 - 
