Baseline feature and bug fixes
Updated Silent mode
Reworked Restart/Logout logic

--- a/2.0-Beta1 Release Notes.md
+++ b/2.0-Beta1 Release Notes.md
@@ -66,6 +66,10 @@ We are adding extended support for running Baseline as a script (as opposed to t
 		1. Configuration file located at `/usr/local/Baseline/BaselineConfig.plist`
 		1. `.mobileconfig` Profile installed manually or via MDM
 	- Valid Plist configuration files can be created using iMazing Profile Editor.
+- `-s|--silent|--silent-mode`
+	- Enables "Silent Mode" for Baseline
+	- Baseline will no longer use any SwiftDialog features and SwiftDialog will not be automatically installed.
+	- Baseline will not check whether a user is fully logged in. Baseline will run even at the loginwindow or prior to a user account being created.
 
 ## Improvements and Fixes
 - Consolidated temporary files into a single directory to simplified the cleanup process.
